[HIGHLIGHT] Modularize all optional extension, move from engine core to folder extensions
[HIGHLIGHT] Improve thirdparty libs building, 99% of them build from sources or github actions with latest toolchain, see also: `adxeproject/buildware`
[HIGHLIGHT] Add new API `Director::setChildrenIndexerEnabled` for speed up getChildByTag & getChildByName support
[FIX] Fix uniform location mismatch when more than 1 spine with different shaders  
[FIX] Fix imgui draw frame cause afterimage when game scene nothing to draw
[FIX] Set global Z value of label debug layer to be the same as the parent label to fix display issue
[FIX] Use TTF scaled metrics to calculate line height, thanks to @rh101 
[FIX] Fix Memory leak in ShaderModuleGL::getErrorLog(), thanks to @Xrysnow
[FIX] Fix console output text encoding for win32
[FIX] Fix charset process for fontName on win32
[FIX] Fix Crash on ParticleBatchNode::updateProgramStateTexture() 
[FIX] Fix Crash on SpriteBatchNode::appendChild when CC_SPRITE_DEBUG_DRAW==1
[FIX] Fix Lua can't get `unsigned char` values of `ValueMap`
[REFINE] CCValue move construct and assign with std::string support
[REFINE] Improve windows dev workflow, use working directory instead copy resources to build binary directory
[REFINE] Add lua debug project file to lua project template
[REFINE] Remove lua 64bit spec search path, since we can compile compatible bytecode for both plainlua and luajit
[REFINE] Put stats labels to safe origin to make sure we can see it integral at some mobile device
[REFINE] Improve cmake scripts
[REFINE] Replace deprecated repo `jcenter` with `mavenCentral`
[REFINE] Lua-5.4 compatible
[REFINE] Improve cmdline-tools
[REFINE] Ensure label underline node has the same global Z value as the label node to fix visibility issue when global Z is not 0
[REFINE] Improve android astc support check
[REFINE] Improve the "Physics part" (#379), thanks  to @aismann 
[REFINE] Rename command line to to `adxe`
[REFINE] Update imgui to 1.84 WIP